added .env file

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "E-Commerce-Back-End",
+  "name": "e-Commerce-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
