--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-Commerce-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "A back end for an e-commerce site by taking a working Express.js API and configure it to use Sequelize to interact with a MySQL database.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
